--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body {
   height: 100%;
 }
 
-.map__hint {
-  font-weight: 600 !important;
-  font-size: 18px !important;
-}
-
 .map__link {
   color: cornflowerblue;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  display: block;
+  text-align: center;
 }
 
 .map__imgs {
